# PAA-first-assignment

./: CMakeLists.txt  README.md  compilar.sh  executar.sh  main.cpp  out.txt  test.txt
data/: ex.in
data/Com/: completo-10.txt  completo-100.txt  completo-150.txt  completo-200.txt  completo-250.txt  completo-300.txt  completo-50.txt
data/Exemplos/: out_1.txt  out_2.txt  out_3.txt  out_4.txt  out_5.txt
data/time/: time.text
include/: Edge.h  Graph.h  ListGraph.h  MatrixGraph.h  Types.h  adjacencylist.h  adjacencymatrix.h  graph.h  heap.h  solution.h  timer.h
src/: Graph.cpp  ListGraph.cpp  MatrixGraph.cpp  adjacencylist.cpp  adjacencymatrix.cpp  graph.cpp  heap.cpp  solution.cpp
util/: a.out  generate_graphs.cpp  generate_graphs.h
